--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         
     .head{
         text-align:center;
+        font-family: "Lucida Console", "Courier New", monospace;
         border-top: 1px solid black;
         padding:3%
     }
     h1{
-        text-align:center;
+        text-align:center;font-size: 50px;
     }
     .center{
         text-align:center;
@@ -42,11 +43,14 @@ border: 3px solid burlywood;
 
  
 </head>
-<body>
+<body style ="background-color:rgb(212, 246, 252);padding:7%;
+background-size:cover;border-color:rgb(5, 53, 158);  border-style: solid;
+  border-width: 40px;
+">
     <h1> MOHD ZIA</h1>
     <p class="center" >
-        <img src="C:\Users\Mohd Zia\Downloads\pica2.jpg" height="100" weidth="100"/>
-        Email: iib2021027@iiita.ac.in | Phone : ********** | My Githul URL: <a href="https://github.com/MohDzIa25"> Github profile link</a></p>
+        <img src="image/pica2.jpg" height="100" weidth="10"/>
+        Email: iib2021027@iiita.ac.in | Phone :___________ | My Githul URL: <a href="https://github.com/MohDzIa25"> Github profile link</a></p>
     <h2 class ="head"> Education</h2>
     <ul>
         <li>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp School: Bishop Johnson School And College Allahabad, Uttarpradesh</li>
