--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ border: 3px solid burlywood;
 </head>
 <body style ="background-color:rgb(212, 246, 252);padding:7%;
 background-size:cover;border-color:rgb(5, 53, 158);  border-style: solid;
-  border-width: 40px;
+  border-width: 40px; border-radius: 25px;border-bottom-left-radius: 25px;margin-inline:0%;
 ">
     <h1> MOHD ZIA</h1>
     <p class="center" >
